# cct-review

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/: aqms.hpp  aqmsPostgresClient.cpp  aqmsPostgresClient.hpp  aqmsPostgresHandler.cpp  aqmsPostgresHandler.hpp  authenticator.cpp  authenticator.hpp  callback.cpp  callback.hpp  cctPostgresService.cpp  cctPostgresService.hpp  events.hpp  exceptions.hpp  ldap.cpp  ldap.hpp  listener.cpp  listener.hpp  main.cpp  permissions.cpp  permissions.hpp  postgresql.cpp  postgresql.hpp  server.hpp  unpackCCTJSON.hpp
cct-frontend/src/components/: CCTReview.jsx  EventTable.jsx  SettingsDialog.jsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CCTReview.jsx  EventTable.jsx  Footer.jsx  Header.jsx  Login.jsx  SettingsDialog.jsx  SpectraFit.jsx  TableFit.jsx
frontend/src/utilities/: acceptFromAPI.js  acceptFromAPI.jsx  cividis.js  getEndpoint.js  getEndpoint.jsx  getEnvelopeDataFromAPI.js  getHeavyWeightDataFromAPI.js  getHeavyWeightDataFromAPI.jsx  getLightWeightDataFromAPI.js  getLightWeightDataFromAPI.jsx  login.js  login.jsx  rejectFromAPI.js  rejectFromAPI.jsx
